[gd_scene load_steps=26 format=3 uid="uid://b64qjw8xj5bai"]

[ext_resource type="Script" uid="uid://dd418jmjsjo4s" path="res://Enemies/Scripts/enemigo_mago.gd" id="1_8pfy3"]
[ext_resource type="PackedScene" uid="uid://wmo1mbsyyoqo" path="res://Enemies/Scenes/proyectil.tscn" id="2_3kha5"]
[ext_resource type="PackedScene" uid="uid://lk8trltj0a4p" path="res://Enemies/Models/characters/gltf/Mage.glb" id="2_8ooqn"]
[ext_resource type="PackedScene" uid="uid://bm2rdmfh6vuh0" path="res://Enemies/Models/items/gltf/spellbook_open.gltf" id="3_8pfy3"]
[ext_resource type="PackedScene" uid="uid://qs2uaqagi7gc" path="res://Enemies/Models/items/gltf/staff.gltf" id="4_8pfy3"]
[ext_resource type="AnimationLibrary" uid="uid://b40d85y1d7h8u" path="res://Enemies/Animaciones/Rig_Medium/Rig_Medium_General.glb" id="4_v1ckb"]
[ext_resource type="AnimationLibrary" uid="uid://dyvj6tgbkj7wq" path="res://Enemies/Animaciones/Rig_Medium/Rig_Medium_MovementBasic.glb" id="5_ux58l"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_q3bf3"]

[sub_resource type="SphereShape3D" id="SphereShape3D_dwibw"]
radius = 0.7828006

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nvbjw"]
animation = &"Rig_Medium_General/Throw"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_x1hai"]
animation = &"Rig_Medium_General/Idle_B"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bl36p"]
animation = &"Rig_Medium_MovementBasic/Running_A"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lexfb"]
animation = &"Rig_Medium_MovementBasic/Walking_A"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_j6ffu"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rtpx0"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_dn8ec"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_o6xcr"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pss73"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_nvbjw"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bl36p"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_lexfb"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_x1hai"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xf5kh"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_t2ku8"]
states/Attack/node = SubResource("AnimationNodeAnimation_nvbjw")
states/Attack/position = Vector2(718, 105)
states/Idle/node = SubResource("AnimationNodeAnimation_x1hai")
states/Idle/position = Vector2(130, 167)
states/Run/node = SubResource("AnimationNodeAnimation_bl36p")
states/Run/position = Vector2(460, 220)
states/Start/position = Vector2(56, 32)
states/Walk/node = SubResource("AnimationNodeAnimation_lexfb")
states/Walk/position = Vector2(442, 46)
transitions = ["Walk", "Run", SubResource("AnimationNodeStateMachineTransition_j6ffu"), "Run", "Walk", SubResource("AnimationNodeStateMachineTransition_rtpx0"), "Attack", "Walk", SubResource("AnimationNodeStateMachineTransition_dn8ec"), "Attack", "Run", SubResource("AnimationNodeStateMachineTransition_o6xcr"), "Start", "Idle", SubResource("AnimationNodeStateMachineTransition_pss73"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_nvbjw"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_bl36p"), "Attack", "Idle", SubResource("AnimationNodeStateMachineTransition_lexfb"), "Run", "Idle", SubResource("AnimationNodeStateMachineTransition_x1hai"), "Idle", "Run", SubResource("AnimationNodeStateMachineTransition_xf5kh")]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_x1hai"]
height = 8.481201
radius = 3.2016602

[node name="EnemigoMago" type="CharacterBody3D" node_paths=PackedStringArray("anim_tree")]
script = ExtResource("1_8pfy3")
escena_proyectil = ExtResource("2_3kha5")
anim_tree = NodePath("AnimationTree")
estado_quieto = "Idle"
estado_caminar = "Walk"
estado_atacar = "Attack"

[node name="Mage" parent="." instance=ExtResource("2_8ooqn")]

[node name="Skeleton3D" parent="Mage/Rig_Medium" index="0"]
bones/1/position = Vector3(0, 0.33091083, 0)
bones/2/position = Vector3(-0.17094506, 0.089735, -0.011803009)
bones/2/rotation = Quaternion(0.9986554, 3.3480123e-07, 5.412641e-08, 0.051840782)
bones/3/rotation = Quaternion(0.9282488, -2.5681096e-08, 6.446361e-07, 0.37195992)
bones/4/rotation = Quaternion(-0.7438154, 1.8354768e-07, -5.8234616e-07, 0.6683851)
bones/5/rotation = Quaternion(6.396772e-09, 0.92002106, -0.3918689, 6.119332e-08)
bones/6/rotation = Quaternion(1.135864e-10, 8.465827e-09, -0.025757743, 0.99966824)
bones/7/rotation = Quaternion(1.12720215e-10, -8.446021e-09, 0.02575774, 0.99966824)
bones/8/position = Vector3(0.21200734, 0.13413227, 8.480239e-08)
bones/8/rotation = Quaternion(-0.71828145, 0.031466007, -0.29561925, 0.6290398)
bones/9/rotation = Quaternion(3.5290352e-08, -5.1751528e-08, -0.74590415, 0.6660533)
bones/11/rotation = Quaternion(-0.46607104, -0.2242817, -0.009472752, 0.8557954)
bones/12/rotation = Quaternion(1.6806099e-09, 1.680615e-09, -0.7071068, 0.7071067)
bones/13/rotation = Quaternion(0, 2.283618e-20, 0, 1)
bones/14/position = Vector3(-0.21200734, 0.13413227, 8.5732175e-08)
bones/14/rotation = Quaternion(-0.6672441, 0.29152527, 0.46955016, 0.49932066)
bones/15/rotation = Quaternion(2.7676302e-08, 4.0066112e-08, 0.68729424, 0.72637916)
bones/17/rotation = Quaternion(-0.2842832, 0.5012511, 0.014847649, 0.8171352)
bones/18/rotation = Quaternion(1.6805918e-09, -1.6805916e-09, 0.7071068, 0.7071067)
bones/19/position = Vector3(0.17094506, 0.10743954, 0.0118030375)
bones/19/rotation = Quaternion(0.98723745, -2.3344336e-07, -3.1239978e-08, 0.15925531)
bones/20/rotation = Quaternion(0.60628855, 5.4905957e-08, -4.2104634e-07, 0.79524475)
bones/21/rotation = Quaternion(-0.7672061, -1.3095166e-07, 1.08693285e-07, 0.6414008)
bones/22/rotation = Quaternion(1.1413652e-09, 0.92006195, -0.39177305, 7.3922436e-08)

[node name="BoneAttachment3D" type="BoneAttachment3D" parent="Mage/Rig_Medium/Skeleton3D" index="8"]
transform = Transform3D(-0.000689541, -0.000359878, 0.99999887, 0.87863463, 0.47749272, 0.00077814277, -0.47749266, 0.878635, -1.3366748e-05, 0.5152789, 0.7654745, -0.018212173)
bone_name = "handslot.l"
bone_idx = 12

[node name="spellbook_open2" parent="Mage/Rig_Medium/Skeleton3D/BoneAttachment3D" instance=ExtResource("3_8pfy3")]

[node name="BoneAttachment3D2" type="BoneAttachment3D" parent="Mage/Rig_Medium/Skeleton3D" index="9"]
transform = Transform3D(-0.00042085815, 0.00023150447, -0.9999992, -0.42020667, 0.90742785, 0.00038692553, 0.9074273, 0.4202067, -0.00028491634, -0.4915397, 0.8769209, 0.28914154)
bone_name = "handslot.r"
bone_idx = 18

[node name="staff2" parent="Mage/Rig_Medium/Skeleton3D/BoneAttachment3D2" instance=ExtResource("4_8pfy3")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.006111026, 1.0284928, 0)
shape = SubResource("CapsuleShape3D_q3bf3")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.014867544, 1.1572847, 0)
shape = SubResource("SphereShape3D_dwibw")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Mage")
libraries = {
&"Rig_Medium_General": ExtResource("4_v1ckb"),
&"Rig_Medium_MovementBasic": ExtResource("5_ux58l")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath("../Mage")
tree_root = SubResource("AnimationNodeStateMachine_t2ku8")
anim_player = NodePath("../AnimationPlayer")

[node name="AreaVision" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="AreaVision"]
transform = Transform3D(0.79254514, 0.025025874, 0.6092995, 0.6098132, -0.032524936, -0.79187745, 0, 0.99915755, -0.04103859, 0.019291803, 1.1602118, 4.7896814)
shape = SubResource("CylinderShape3D_x1hai")

[node name="PuntoDisparo" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.57548517, 0.65921366, 1.1512139)

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_entered" from="AreaVision" to="." method="_on_area_vision_body_entered"]
[connection signal="body_exited" from="AreaVision" to="." method="_on_area_vision_body_exited"]

[editable path="Mage"]
